# runara

./: 1  Makefile  README.md  compile_commands.json  hallo-program  main.c  meson.build  runara.c  runara.wrap  test  test.c
include/runara/: runara.h
